// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressItemsContainer> renders the component 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="summary"
      >
        <div
          class="name"
        >
          <strong>
             
          </strong>
        </div>
        <div
          class="street"
        >
          14 Stamford Court
        </div>
        <div
          class="cityRegion"
        >
          , LA
        </div>
        <div
          class="country"
        />
      </div>
      <div
        class="actions"
      >
        <button
          class="editButton"
        >
          <span
            class="icon"
          >
            <svg
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
              />
              <path
                d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Edit
          </span>
        </button>
        <button
          class="deleteButton"
        >
          <span
            class="icon"
          >
            <svg
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="3 6 5 6 21 6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
              <line
                x1="10"
                x2="10"
                y1="11"
                y2="17"
              />
              <line
                x1="14"
                x2="14"
                y1="11"
                y2="17"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Delete
          </span>
        </button>
      </div>
    </div>
    <button
      aria-label="Add an address"
      class="root"
    >
      <span
        class="icon"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="16"
          />
          <line
            x1="8"
            x2="16"
            y1="12"
            y2="12"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Add an address
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<AddressItemsContainer> renders the component with list display type 1`] = `
<DocumentFragment>
  <div
    class="list"
  >
    <button
      aria-label="Add an address"
      class="list"
    >
      <span
        class="icon"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="16"
          />
          <line
            x1="8"
            x2="16"
            y1="12"
            y2="12"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Add an address
      </span>
    </button>
  </div>
</DocumentFragment>
`;
